libtraceevent: Handle printf '%+d" case

The print prasing does not handle '%+d' and prints ">+<d" instead. The '+' is a
valid printf specifier. Make sure to handle it.

Link: https://lore.kernel.org/linux-trace-devel/20230601084823.43e68c0f@rorschach.local.home

Bugzilla: https://bugzilla.kernel.org/show_bug.cgi?id=217339
Reported-by: Douglas RAILLARD <douglas.raillard@arm.com>
Signed-off-by: Steven Rostedt (Google) <rostedt@goodmis.org>